[tool.poetry]
name = "project-lunch"
version = "0.1.0"
description = ""
authors = ["김민수 <mskim@huray.net>"]
readme = "README.md"
packages = [{include = "project_lunch"}]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

